# xiaoyaoan

./: README.md  app.py  ms_deploy.json  pyproject.toml  requirements.txt
.trae/documents/: PRD.md  Technical-Architecture.md
data/: medsafe_kg.db  sample_medication_list.csv
medsafe_core/: __init__.py  db.py  elderly_screen.py  food_drug.py  interaction.py  knows_client.py  label_explainer.py  llm_client.py  models.py  normalizer.py
medsafe_core/data/: __init__.py  sample_data.py  seed_db.py
medsafe_mcp/: __init__.py  server.py
medsafe_skill/: SKILL.md
medsafe_skill/scripts/: check_food_drug.py  check_interaction.py  explain_label.py  screen_elderly.py
studio/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_core.py
