[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medsafe-helper"
version = "0.1.0"
description = "面向大众与家庭照护者的用药安全科普工具"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "MedSafe Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rapidfuzz>=3.0.0",
    "gradio>=5.0.0",
    "mcp>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "dashscope>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
medsafe-mcp = "medsafe_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medsafe_core*", "medsafe_mcp*", "studio*"]
